[fix] #249 - 유저 확보로 인한 MockDataGenerator 관련 로직 수정 및 삭제